fixed details z-index

--- a/_projects.scss
+++ b/_projects.scss
@@ -103,7 +103,7 @@
   top: 0;
   right: 0;
   padding: 50px;
-  z-index: 20;
+  z-index: 200000000000;
   transform: translateY(100%);
   transition: 0.4s ease-in;
   &[data-visible="true"] {
