--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ main .view_work div {
   top: 0;
   right: 0;
   padding: 50px;
-  z-index: 20;
+  z-index: 200000000000;
   transform: translateY(100%);
   transition: 0.4s ease-in;
 }
